--- a/index.html
+++ b/index.html
@@ -16,19 +16,32 @@
   <title>Frontend Mentor | Article preview component</title>
 </head>
 <body>
-
-  Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
-
-  Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
-
-  Michelle Appleton
-  28 Jun 2020
-
-  Share
-
+  <div class="container">
+    <div class="img-container">
+      <img src="images/drawers.jpg" alt="">
+    </div>
+    <div class="text-container">
+      <h1 class="h1">
+        Shift the overall look and feel by adding these wonderful 
+        touches to furniture in your home
+      </h1>
+    
+      <p class="paragragh">
+        Ever been in a room and felt like something was missing? Perhaps 
+        it felt slightly bare and uninviting. I’ve got some simple tips 
+        to help you make any room feel complete.
+      </p>
+      <div class="author-div">
+        <div class="namenddate">
+          <p>Michelle Appleton</p>
+          <p>28 Jun 2020</p>
+        </div>
+        <div class="icon-div">
+          
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
