again and again

--- a/index.html
+++ b/index.html
@@ -33,8 +33,13 @@
       </p>
       <div class="author-div">
         <div class="namenddate">
-          <p>Michelle Appleton</p>
-          <p>28 Jun 2020</p>
+          <div class="nad-img">
+            <img src="images/avatar-michelle.jpg" alt="">
+          </div>
+          <div class="nad-info">
+            <p class="name_of_author">Michelle Appleton</p>
+            <p>28 Jun 2020</p>
+          </div>       
         </div>
         <div class="icon-div">
           
