--- a/index.html
+++ b/index.html
@@ -41,8 +41,14 @@
             <p>28 Jun 2020</p>
           </div>       
         </div>
+        <div class="share-expand">
+          <p>SHARE</p>
+          <img src="images/icon-facebook.svg" alt="">
+          <img src="images/icon-twitter.svg" alt="">
+          <img src="images/icon-pinterest.svg" alt="">
+        </div>
         <div class="icon-div">
-          
+          <img src="images/icon-share.svg" alt="" class="share-icon">
         </div>
       </div>
     </div>
