--- a/index.html
+++ b/index.html
@@ -46,13 +46,15 @@
           <img src="images/icon-facebook.svg" alt="">
           <img src="images/icon-twitter.svg" alt="">
           <img src="images/icon-pinterest.svg" alt="">
+          <span class="i-span"><i class="fa-solid fa-share"></i></span>
         </div>
         <div class="icon-div">
-          <img src="images/icon-share.svg" alt="" class="share-icon">
+          <span class="i-span_two"><i class="fa-solid fa-share"></i></span>
         </div>
       </div>
     </div>
   </div>
 <script src="script.js"></script>
+<script src="https://kit.fontawesome.com/9e37084d9f.js" crossorigin="anonymous"></script>
 </body>
 </html>
